-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
Fully Compatible
-
ALL
-
Dev Tools 2019-11-04
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Use of an uninitialized variable
Defect 113947 (STATIC_C)
Checker UNINIT (subcategory none)
File: /src/mongo/stdx/thread.h
Function mongo::stdx::support::SigAltStackController::_uninstall() const
/src/mongo/stdx/thread.h, line: 88
Declaring variable "ss" without initializer.
stack_t ss;
/src/mongo/stdx/thread.h, line: 90
Using uninitialized value "ss". Field "ss.ss_sp" is uninitialized when calling "sigaltstack".
if (sigaltstack(&ss, nullptr)) {