SERVER-44274 zero-initialize stack_t structure